# histolozee

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: defines.h.in  main.cpp
src/common/: AABB.h  CoordinateFrame.cpp  CoordinateFrame.h  CoordinateFrameLinkingType.h  HZeeException.hpp  Identity.h  JSONSerializers.hpp  ObjectCounter.hpp  PublicTypes.h  RangeTypes.h  ThrowAssert.hpp  UID.cpp  UID.h  UIDRange.h  Utility.cpp  Utility.hpp  Viewport.cpp  Viewport.h
src/gui/: ActionsContainer.cpp  ActionsContainer.h  MainWindow.cpp  MainWindow.h  PublicTypes.h
src/gui/controls/: QRealScrollBar.cpp  QRealScrollBar.h  QRealSlider.cpp  QRealSlider.h
src/gui/docks/: PublicSlideTypes.h  PublicTypes.h  RefFrameEditorDock.cpp  RefFrameEditorDock.h  SlideStackEditorDock.cpp  SlideStackEditorDock.h  Utility.cpp  Utility.h
src/gui/layout/: LayoutConstruction.cpp  LayoutConstruction.h  LayoutData.h  LayoutSerialization.cpp  LayoutSerialization.h  SplitterLayoutConstruction.cpp  SplitterLayoutConstruction.h  ViewType.cpp  ViewType.h  ViewTypeRange.h
src/gui/toolbars/: ToolBarCreation.cpp  ToolBarCreation.h
src/gui/treemodel/: TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h
src/gui/view/: BorderPainter.cpp  BorderPainter.h  GLWidget.cpp  GLWidget.h  VTKWidget.cpp  VTKWidget.h  ViewSliderParams.h  ViewWidget.cpp  ViewWidget.h
src/imageio/: CMakeLists.txt  HZeeTypes.cpp  HZeeTypes.hpp  ImageCpuRecord.cpp  ImageCpuRecord.h  ImageHeader.cpp  ImageHeader.h  ImageLoader.cpp  ImageLoader.h  ImageSettings.cpp  ImageSettings.h  ImageTransformations.cpp  ImageTransformations.h  ParcellationCpuRecord.cpp  ParcellationCpuRecord.h
src/imageio/itkbridge/: ITKBridge.cpp  ITKBridge.hpp  ImageDataFactory.cpp  ImageDataFactory.hpp
src/imageio/itkdetails/: IITKImageIOInfo.hpp  ImageBaseData.cpp  ImageBaseData.hpp  ImageData.hpp  ImageData.tpp  ImageIOInfo.cpp  ImageIOInfo.hpp  ImageReading.cpp  ImageReading.hpp  ImageReading.tpp  ImageTypes.cpp  ImageTypes.hpp  ImageUtility.cpp  ImageUtility.hpp  ImageUtility.tpp
src/imageio/util/: CreateParcellationImage.h  Factory.hpp  HZeeException.hpp  MathFuncs.cpp  MathFuncs.hpp
src/logic/: AppController.cpp  AppController.h  AppInitializer.cpp  AppInitializer.h  CrosshairsType.h  GLWidgetConnector.cpp  GLWidgetConnector.h  ProgramOptions.cpp  ProgramOptions.h  RenderableRecord.h  StateChangeSignaler.cpp  StateChangeSignaler.h  TransformationState.h
src/logic/annotation/: AnnotationHelper.cpp  AnnotationHelper.h  LandmarkGroupCpuRecord.cpp  LandmarkGroupCpuRecord.h  PointList.h  PointRecord.h  Polygon.cpp  Polygon.h  SlideAnnotationCpuRecord.cpp  SlideAnnotationCpuRecord.h
src/logic/camera/: Camera.cpp  Camera.h  CameraHelpers.cpp  CameraHelpers.h  CameraStartFrameType.h  CameraTypes.h  OrthogonalProjection.cpp  OrthogonalProjection.h  PerspectiveProjection.cpp  PerspectiveProjection.h  Projection.cpp  Projection.h
src/logic/colormap/: ImageColorMap.cpp  ImageColorMap.h  ParcellationLabelTable.cpp  ParcellationLabelTable.h
src/logic/data/: DataHelper.cpp  DataHelper.h  DataLoading.cpp  DataLoading.h  DataMemoryUse.cpp  DataMemoryUse.h
src/logic/interaction/: CameraInteractionHandler.cpp  CameraInteractionHandler.h  CrosshairsInteractionHandler.cpp  CrosshairsInteractionHandler.h  InteractionHandlerBase.cpp  InteractionHandlerBase.h  InteractionHandlerType.h  InteractionModes.h  InteractionPack.cpp  InteractionPack.h  RefImageInteractionHandler.cpp  RefImageInteractionHandler.h  SlideInteractionHandler.cpp  SlideInteractionHandler.h  StackInteractionHandler.cpp  StackInteractionHandler.h  WindowLevelInteractionHandler.cpp  WindowLevelInteractionHandler.h
src/logic/interfaces/: IGestureHandler.h  IInteractionHandler.h  IMouseEventHandler.h  ITabletEventHandler.h  IWheelEventHandler.h
src/logic/managers/: ActionManager.cpp  ActionManager.h  AssemblyManager.cpp  AssemblyManager.h  ConnectionManager.cpp  ConnectionManager.h  DataManager.cpp  DataManager.h  GuiManager.cpp  GuiManager.h  InteractionManager.cpp  InteractionManager.h  LayoutManager.cpp  LayoutManager.h  TransformationManager.cpp  TransformationManager.h
src/logic/records/: ImageColorMapRecord.h  ImageRecord.h  LabelTableRecord.h  LandmarkGroupRecord.h  MeshRecord.h  ParcellationRecord.h  SlideAnnotationRecord.h  SlideRecord.h
src/logic/serialization/: ProjectSerialization.cpp  ProjectSerialization.h
src/logic/ui/: ImageDataUiMapper.cpp  ImageDataUiMapper.h  ParcellationDataUiMapper.cpp  ParcellationDataUiMapper.h  SlideStackDataUiMapper.cpp  SlideStackDataUiMapper.h
src/logic/utility/: DirectionMaps.cpp  DirectionMaps.h
src/mesh/: MeshCpuRecord.cpp  MeshCpuRecord.h  MeshInfo.cpp  MeshInfo.hpp  MeshLoading.cpp  MeshLoading.h  MeshProperties.cpp  MeshProperties.h  MeshTypes.h
src/mesh/vcgdetails/: ProcessMesh.cpp  ProcessMesh.h
src/mesh/vtkdetails/: ErrorObserver.hpp  MeshGeneration.cpp  MeshGeneration.hpp
src/rendering/: ShaderNames.cpp  ShaderNames.h
src/rendering/assemblies/: AnnotationAssembly.cpp  AnnotationAssembly.h  CameraLabelAssembly.cpp  CameraLabelAssembly.h  CrosshairsAssembly.cpp  CrosshairsAssembly.h  ImageSliceAssembly.cpp  ImageSliceAssembly.h  LandmarkAssembly.cpp  LandmarkAssembly.h  MeshAssembly.cpp  MeshAssembly.h  RenderingProperties.h  SlideStackAssembly.cpp  SlideStackAssembly.h
src/rendering/common/: AccumulatedRenderingData.h  DrawableOpacity.h  DrawableScaling.h  MeshColorLayer.h  MeshPolygonOffset.cpp  MeshPolygonOffset.h  NamedColors.h  ObjectIdHelper.cpp  ObjectIdHelper.h  SceneType.h  ShaderProviderType.h  ShaderStageTypes.h  TransformationTypes.h
src/rendering/computers/: ComputerBase.cpp  ComputerBase.h  Polygonizer.cpp  Polygonizer.h
src/rendering/drawables/: BasicMesh.cpp  BasicMesh.h  Crosshairs.cpp  (+15 more)
src/slideio/: SlideAssociatedImages.cpp  SlideAssociatedImages.h  SlideCpuRecord.cpp  SlideCpuRecord.h  SlideHeader.cpp  SlideHeader.h  SlideHelper.cpp  SlideHelper.h  SlideLevel.h  SlideProperties.cpp  SlideProperties.h  SlideReading.cpp  SlideReading.h  SlideTransformation.cpp  SlideTransformation.h
(+211 files in other folders)
